8/4/2005	1.0.0	Initial Release
			CVS Tag "Release-1-0-0"

8/9/2005	1.0.1	Added put_sc_key (put secure channel key)
			CVS Tag "Release-1-0-1"

8/12/2005	1.0.2	Added send_apdu (APDU pass through)
			CVS Tag "Release-1-0-2"

9/12/2005		Last version to support OpenPlatform Library
			Next versions will support the combined OP/GP library
			CVS Tag "last_openplatform"

9/15/2005	1.1.0	Now linked against GlobalPlatform.dll,
			instead of OpenPlatform.dll.
			Supports GlobalPlatform 2.1.1 secure channel protocols
			in addition to OpenPlatform 2.0.1.
			Supports setting privilege when installing an applet.
			CVS Tag "Release-1-1-0"

9/28/2005	1.1.1	Automatic recognition of Secure Channel Protocol and
			implemenentation for GP 2.1.1 cards.
			Quotation with "" for parameters with white space supported
			Smart card communication protocol defaults to T=1 | T=0
			Use of EXIT_SUCCESS and EXIT_FAILURE
			Fixes

12/14/2005	1.2.0	Automatic detection of package AIDs, file size (-nvCodeLimit),
			applet AID in new install command
			Automatic selection of Security Domain AID
			Linked against GlobalPlatform 2.0.1 library

3/24/2006	1.3.1  README change
			Synchronized to latest GlobalPlatform library
			Cleanup
			CVS Tag "Release-1-3-1"

12/24/2006	1.4.0	GemXpresso support
			CAP file support is now default in examples
			Compiled against GlobalPlatform 4.0.3

08/22/2007	1.4.1
			Parameters for install_for_load added and fixed
			ico file added

10/03/2007	1.4.2
			Security Domain AID is automatically chosen based
			on AID given to the select command or default Card Manager /
			Security Issuer Domain AID is chosen
			Changed License to LGPL
			Executable Modules were not reported correctly
