@@ -1,0 +1,12 @@
+enable_trace
+establish_context
+card_connect
+# Oberthur uses a000000003000000 instead of a0000000030000
+select -AID a000000003000000
+open_sc -security 1 -keyind 0 -keyver 0 -mac_key 404142434445464748494a4b4c4d4e4f -enc_key 404142434445464748494a4b4c4d4e4f // Open secure channel
+delete -AID a00000006203010c0101
+delete -AID a00000006203010c01
+delete -AID a00000006203010c0101
+install -file HelloWorld.cap -nvDataLimit 500 -instParam 00 -priv 2
+card_disconnect
+release_context
